<resources>
    <string name="app_name">LilyHouse</string>
    <string name="FILTER_MENU_ITEM_TITLE">Filter</string>
    <string name="SEARCH_MENU_ITEM_TITLE">Search</string>
    <string name="COVER_MANGA_TITLE_STRING">Manga Title</string>
    <string name="COVER_MANGA_AUTHOR_STRING">Manga Author</string>
    <string name="DIALOG_FILTER_TITLE_STRING">筛选</string>
    <string name="SORT_MENU_ITEM_TITLE">Sort</string>
    <string name="SUBJECT_TITLE_TEXT">题材</string>
    <string name="REGION_TITLE_TEXT">地区</string>
    <string name="STATUS_TITLE_TEXT">进度</string>
    <string name="BTN_CANCEL_FILTER_TEXT">取消</string>
    <string name="BTN_APPLY_FILTER_TEXT">应用</string>
    <string name="FAVORITE_MENU_ITEM_TITLE">Favorite</string>
    <string name="TV_TEST_SCROLL_TEXT">
        "Navigation
        Navigation refers to the interactions that allow users to navigate across, into, and back out from the different pieces of content within your app. Android Jetpack's Navigation component helps you implement navigation, from simple button clicks to more complex patterns, such as app bars and the navigation drawer. The Navigation component also ensures a consistent and predictable user experience by adhering to an established set of principles.

        The Navigation component consists of three key parts that are described below:

        Navigation graph: An XML resource that contains all navigation-related information in one centralized location. This includes all of the individual content areas within your app, called destinations, as well as the possible paths that a user can take through your app.
        NavHost: An empty container that displays destinations from your navigation graph. The Navigation component contains a default NavHost implementation, NavHostFragment, that displays fragment destinations.
        NavController: An object that manages app navigation within a NavHost. The NavController orchestrates the swapping of destination content in the NavHost as users move throughout your app.
        As you navigate through your app, you tell the NavController that you want to navigate either along a specific path in your navigation graph or directly to a specific destination. The NavController then shows the appropriate destination in the NavHost.

        The Navigation component provides a number of other benefits, including the following:

        Handling fragment transactions
        Handling Up and Back actions correctly by default
        Providing standardized resources for animations and transitions
        Implementing and handling deep linking
        Including Navigation UI patterns, such as navigation drawers and bottom navigation, with minimal additional work
        Safe Args - a Gradle plugin that provides type safety when navigating and passing data between destinations
        In addition, you can use Android Studio's Navigation Editor to view and edit your navigation graphs."
    </string>
    <string name="DETAIL_TAB1_TEXT">相关作品</string>
    <string name="DETAIL_TAB2_TEXT">章节信息</string>
    <string name="DETAIL_TAB3_TEXT">评论</string>

    <string-array name="subject_titles_array">
        <item>全部</item>
        <item>冒险</item>
        <item>欢乐向</item>
        <item>格斗</item>
        <item>科幻</item>
        <item>爱情</item>
        <item>竞技</item>
        <item>魔法</item>
        <item>校园</item>
        <item>悬疑</item>
        <item>恐怖</item>
        <item>生活亲情</item>
        <item>百合</item>
        <item>伪娘</item>
        <item>耽美</item>
        <item>后宫</item>
        <item>萌系</item>
        <item>治愈</item>
        <item>武侠</item>
        <item>职场</item>
        <item>奇幻</item>
        <item>节操</item>
        <item>轻小说</item>
        <item>搞笑</item>
    </string-array>

    <string-array name="status_titles_array">
        <item>全部</item>
        <item>连载</item>
        <item>完结</item>
    </string-array>

    <string-array name="region_titles_array">
        <item>全部</item>
        <item>日本</item>
        <item>内地</item>
        <item>欧美</item>
        <item>港台</item>
        <item>韩国</item>
        <item>其他</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
