<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_menu_item"
        android:icon="@drawable/ic_heat_desc"
        android:orderInCategory="100"
        android:title="@string/SORT_MENU_ITEM_TITLE"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_menu_item"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="101"
        android:title="@string/FILTER_MENU_ITEM_TITLE"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_search"
        android:orderInCategory="102"
        android:title="@string/SEARCH_MENU_ITEM_TITLE"
        app:showAsAction="ifRoom" />
</menu>